tests/conformance/invalid/04-invalid-confidence/input.sgl
%% memory

* fact: this has an invalid confidence value {confidence: very-high}
